Import revision of guidelines-for-evaluating-individual-requests-to-participate-in-a-group.html from Wordpress revision

--- a/policies/guidelines-for-evaluating-individual-requests-to-participate-in-a-group.html
+++ b/policies/guidelines-for-evaluating-individual-requests-to-participate-in-a-group.html
@@ -1,6 +1,12 @@
-<!doctype html><html lang=en><title>Guidelines for Evaluating Individual Requests to Participate in a Group</title><body><p><em>Note: These Guidelines are in development and are likely to evolve as W3C gains experience with these requests. In addition, it is possible that we will try to streamline these requests by asking these questions systematically through the user interface.</em>
+<!doctype html><html lang=en><title>Guidelines for Evaluating Individual Requests to Participate in a Group</title><body><p>The W3C Community and Business Group policies seek a balance between individual participation and organizational legal commitments (e.g., the <a href="/community/about/agreements/cla">Community Contributor License Agreement (CLA)</a>. While W3C has a preference for organizational, rather than individual patent and copyright commitments, people may request to participate without representing their organization's legal interests. The W3C Staff has the sole discretion to approve such requests, typically after some discussion with the person who has made the request. After such discussion, several outcomes are possible:</p>
 
-</p><p>The W3C Community and Business Group policies seek a balance between individual participation and organizational legal commitments (e.g., the <a href="/community/about/agreements/cla">Community Contributor License Agreement (CLA)</a>. While W3C has a preference for organizational, rather than individual patent and copyright commitments, people may request to participate without representing their organization's legal interests. The W3C Staff has the sole discretion to approve such requests. This <em>draft</em> document lists some of the considerations the W3C Staff apply when evaluating such requests.</p>
+<ul>
+<li>The person who made the request may choose instead to join the group representing their organization. In this case, the individual returns to the "join" page for the group and chooses the option to join on behalf of their organization.</li>
+<li>The W3C Staff approves the request, which causes the individual to be registered as a participant in the group who has signed the CLA on their own behalf.</li>
+<li>The W3C Staff rejects the request to join as an individual. The W3C Staff typically allows the individual several months to respond to requests for more information or clarification before rejecting a request.</li>
+</ul>
+
+<p>Below are some of the considerations the W3C Staff apply when evaluating requests to join as an individual.</p>
 
 <ul>
 <li>Was the request intentional (that is, not a mistake)?</li>
