--- a/policies/guidelines-for-evaluating-individual-requests-to-participate-in-a-group.html
+++ b/policies/guidelines-for-evaluating-individual-requests-to-participate-in-a-group.html
@@ -6,6 +6,10 @@
 <li>The W3C Staff rejects the request to join as an individual. The W3C Staff typically allows the individual several months to respond to requests for more information or clarification before rejecting a request.</li>
 </ul>
 
+<p>If you have any questions about participation as an individual, please write to team-community-process@w3.org.</p>
+
+<h3>Considerations</h3>
+
 <p>Below are some of the considerations the W3C Staff apply when evaluating requests to join as an individual.</p>
 
 <ul>
