Import revision of guidelines-for-evaluating-individual-requests-to-participate-in-a-group.html from Wordpress revision

--- a/policies/guidelines-for-evaluating-individual-requests-to-participate-in-a-group.html
+++ b/policies/guidelines-for-evaluating-individual-requests-to-participate-in-a-group.html
@@ -15,7 +15,7 @@
 <ul>
 <li>Was the request intentional (that is, not a mistake)?</li>
 <li>Is the person affiliated with a W3C Member? In the case of a W3C Member, only the AC Representative can make a licensing commitment. </li>
-<li>Is the person affiliated with a non-Member that has material business interests in this topic? Usually we will ask the organization to join.</li>
+<li>Is the person affiliated with a non-Member that has material business interests in this topic? Usually we will ask the organization to sign the CLA.</li>
 <li>Is the organization aware of the person's request to participate? Does the person have appropriate permission to participate from the organization (e.g., acceptable under a moonlighting policy/written permission)? Some companies have broad ownership claims to employee work product. If the company claims ownership in the employee's work, the company should be making the legal commitments.</li>
 <li>Is the person a consultant acting as a proxy for an organization? If so, the organization should join.</li>
 <li>Is the person using an organizational email address? That can lead to confusion among colleagues or other parties about representation and should be avoided.</li>
