Import revision of process.html from Wordpress revision

--- a/policies/process.html
+++ b/policies/process.html
@@ -19,7 +19,7 @@
 
 	<div id="w3c-forum" class="tab-content">
 		<section class="dark-blue">	
-		
+		        <p><strong>System Update:</strong> As of 16 July 2015, the W3C Forum is no longer used. Instead, people may discuss proposed Community Groups via comments on the main Community and Business Group blog.</p>
 			<p id="forum-process">The W3C Forum is a venue for discussion of Web-related topics including development of specifications. People submit material (a &#8220;Community Submission&#8221;) to the Forum that they wish to be developed by a Community or Business Group. W3C reserves the right to refuse publication of a Community Submission, for instance if the material is likely to cause offense or confusion.</p>
 			<p>Individuals who wish to participate in the W3C Forum  &mdash; enter into discussion or submit proposals &mdash; agree to the <a href="#general-policies">general communications policies</a>. Participants are responsible for making clear the copyright and patent terms of their submissions.</p>
 		</section>
