Import revision of guidelines-for-evaluating-individual-requests-to-participate-in-a-group.html from Wordpress revision

--- a/policies/guidelines-for-evaluating-individual-requests-to-participate-in-a-group.html
+++ b/policies/guidelines-for-evaluating-individual-requests-to-participate-in-a-group.html
@@ -21,6 +21,7 @@
 <li>Is the person a consultant acting as a proxy for an organization? If so, the organization should join.</li>
 <li>Is the person using an organizational email address? That can lead to confusion among colleagues or other parties about representation and should be avoided.</li>
 <li>Is the group producing Specifications that do not require patent commitments? This is generally known by looking at the mission statement / description on the group's home page. Because we are not seeking licensing commitments, individual participation is generally ok (though there are instances when the chair has indicated a preference for organizational participation). If not sure, ask the Chairs before approving.</li>
+<li>Does the person work for an entity (e.g., EU Project, or government agency) that has IPR policies compatible with the CLA? If so it may be ok to approve the request.</li>
 </ul>
 
 
