Style update (CVS import)

--- a/policies/bg_agreement.html
+++ b/policies/bg_agreement.html
@@ -1,3 +1,4 @@
+<div class="formal-agreement">
 <h1>International World Wide Web Consortium ("W3C")</h1>
 
 <p>BUSINESS GROUP PARTICIPATION AGREEMENT (the "Agreement") effective as of <{$date}> ("Effective Date"), by and between the Massachusetts Institute of Technology, having an office at 32 Vassar Street, 32-G519, Cambridge, Massachusetts 02139 ("MIT"); the European Research Consortium for Informatics and Mathematics, having an office at 2004, Route des Lucioles, BP 93, F-06902 Sophia Antipolis, France ("ERCIM"); Keio University having an office at 5322 Endo, Fujisawa, Kanagawa 252-0882, Japan ("KEIO"); Beihang University, having an office at No 37 Xueyuan Road, Haidian District, Beijing, China (collectively, "Hosts"); and <{$orgname}>, having an office at <{$orgaddr}> (the "Participant").</p>
@@ -62,7 +63,7 @@ c. The Participant hereby agrees to pay the applicable Fee. The initial Fee of <
                          UNITED STATES</pre>
 
 <p>For ERCIM:</p>
-<pre>                         J&eacute;r&ocirc;me Chailloux
+<pre>                         Philipp Hoschka
                          GEIE ERCIM Manager
                          2004, Route des Lucioles
                          Sophia Antipolis
@@ -79,7 +80,7 @@ c. The Participant hereby agrees to pay the applicable Fee. The initial Fee of <
                          JAPAN</pre>
 
 <p>For BEIHANG:</p>
-<pre>                          Institute of Science and Technology of Beihang University                         
+<pre>                         Institute of Science and Technology of Beihang University                         
                          Room 1121, G Tower of New Main Building Beihang University
                          No 37 Xueyuan Road
 			 Haidian District
@@ -181,3 +182,4 @@ c. The Participant hereby agrees to pay the applicable Fee. The initial Fee of <
     </tr>
   </tbody>
 </table>
+</div>
