Import revision of process.html from Wordpress revision

--- a/policies/process.html
+++ b/policies/process.html
@@ -1,4 +1,4 @@
-<!doctype html><html lang=en><title>Community and Business Group Process</title><body><p class="intro dark-blue">This document governs participation in W3C Community and Business Groups. For information about other types of groups in W3C, please see the  <a href="/Consortium/Process/">W3C Process Document</a>.</p>
+<!doctype html><html lang=en><title>Community and Business Group Process</title><body><p class="intro dark-blue">This document governs participation in W3C Community and Business Groups. For information about other types of groups in W3C, please see the <a href="/Consortium/Process/">W3C Process Document</a>.</p>
 
 <h2 class="handwriting">Summary</h2>
 Since the early days of the Consortium, the number of stakeholders of the Web has grown significantly, powerful collaboration tools have gone mainstream, and expectations about standards themselves have evolved. W3C’s “classic” process and Membership models meet the needs of some stakeholders, but not all. W3C seeks to offer larger numbers of developers, designers, and others passionate about the Web the means to build communities.
@@ -7,7 +7,7 @@ This document defines <a href="#community-process">W3C Community Groups</a>, whe
 
 This document also defines <a href="#business-process">Business Groups</a> to increase participation by organizations that may not be primarily motivated by participation in W3C standards development but instead are interested in the application of W3C technologies to business problems, and in providing high-bandwidth input to the standards process. Business Group participants who are not W3C Members pay for staff resources, but the <a href="fees">fee</a> for participating in Business Groups is less than W3C Membership (and grants fewer benefits).
 
-These programs are managed by a Community Development Lead, chosen by W3C management. The roles of the Community Development Lead are described throughout this document.
+These programs are managed by a Community Development Lead, chosen by W3C management. The roles of the Community Development Lead are described throughout this document. Since December 2018, <a href="https://www.w3.org/People/Dom/">Dominique Hazaël-Massieux</a> is Community Development Lead.
 <div id="tabs">
 <ul>
  	<li>
@@ -29,7 +29,7 @@ These programs are managed by a Community Development Lead, chosen by W3C manage
 <div id="w3c-forum" class="tab-content">
 <section class="dark-blue"><strong>System Update:</strong> As of 16 July 2015, the W3C Forum is no longer used. Instead, people may discuss proposed Community Groups via comments on the main Community and Business Group blog.
 <p id="forum-process">The W3C Forum is a venue for discussion of Web-related topics including development of specifications. People submit material (a “Community Submission”) to the Forum that they wish to be developed by a Community or Business Group. W3C reserves the right to refuse publication of a Community Submission, for instance if the material is likely to cause offense or confusion.</p>
-Individuals who wish to participate in the W3C Forum  — enter into discussion or submit proposals — agree to the <a href="#general-policies">general communications policies</a>. Participants are responsible for making clear the copyright and patent terms of their submissions.
+Individuals who wish to participate in the W3C Forum — enter into discussion or submit proposals — agree to the <a href="#general-policies">general communications policies</a>. Participants are responsible for making clear the copyright and patent terms of their submissions.
 
 </section>
 <section>
@@ -56,12 +56,12 @@ The Community Development Lead does not formally approve proposals but <span cla
 </section>
 <section>
 <h4 class="handwriting red">Community Group Operational Agreements</h4>
-A Community Group <span class="rfc2119">may</span> adopt operational agreements (recorded, for example, in the form of a charter) that establish the group's scope of work, decision-making processes, communications preferences, and other operations.  For example, the agreement could establish fair and reasonable criteria for accepting contributions in a specification, or set the group's scope of work (e.g., development of educational materials or discussions about future standards work at W3C).
+A Community Group <span class="rfc2119">may</span> adopt operational agreements (recorded, for example, in the form of a charter) that establish the group's scope of work, decision-making processes, communications preferences, and other operations. For example, the agreement could establish fair and reasonable criteria for accepting contributions in a specification, or set the group's scope of work (e.g., development of educational materials or discussions about future standards work at W3C).
 
 The following rules govern Community Group operational agreements:
 <ul>
- 	<li>They <span class="rfc2119">must</span>  be publicly documented.</li>
- 	<li>They <span class="rfc2119">must</span> be fair  and <span class="rfc2119">must not</span> unreasonably favor or discriminate against any group participant or their employer.</li>
+ 	<li>They <span class="rfc2119">must</span> be publicly documented.</li>
+ 	<li>They <span class="rfc2119">must</span> be fair and <span class="rfc2119">must not</span> unreasonably favor or discriminate against any group participant or their employer.</li>
  	<li>They <span class="rfc2119">must not</span> conflict with or modify this Community and Business Group Process, the <a href="cla">Community Contributor License Agreement (CLA)</a>, or the <a href="final">Final Specification Agreement</a>.</li>
 </ul>
 The person who first proposes a group <span class="rfc2119">may</span> establish the group's initial operational agreements. Thereafter, the Chair determines the means by which the group adopts and modifies operational agreements. The Chair must give actual notice to the participants of any material changes to the agreements. Participants may resign from the group if they do not wish to participate under the new agreements.
@@ -117,7 +117,7 @@ All communications <span class="rfc2119">must</span> be archived.
 </section>
 <section>
 <h4 class="handwriting red">Community Group Branding</h4>
-Any Community Group branding (e.g., use of W3C name or logo in ways that may confuse the state of standardization, or technology-specific logo development)  is subject to review and approval by the Head of W3C Marketing and Communications.
+Any Community Group branding (e.g., use of W3C name or logo in ways that may confuse the state of standardization, or technology-specific logo development) is subject to review and approval by the Head of W3C Marketing and Communications.
 
 </section>
 <section>
@@ -138,7 +138,7 @@ The label "Community Group Report" refers to any document produced by a Group. S
  	<li>drafts are governed by <a href="cla">Community Contributor License Agreement (CLA)</a>. W3C will provide a template for including copyright information.</li>
  	<li>they <span class="rfc2119">must</span> include the name the group that published the deliverables and link to a public page about the group.</li>
  	<li>they <span class="rfc2119">must</span> include a publication date.</li>
- 	<li>the history of Contributions (as defined under the CLA) <span class="rfc2119">must</span>  be archived permanently on the W3C Web site.</li>
+ 	<li>the history of Contributions (as defined under the CLA) <span class="rfc2119">must</span> be archived permanently on the W3C Web site.</li>
  	<li>They <span class="rfc2119">must</span> include boilerplate language required by W3C (e.g., notice that Contributions are made under the CLA and that certain conditions apply).</li>
  	<li>When published on the W3C site, they <span class="rfc2119">must not</span> violate the <a href="http://www.w3.org/Consortium/Legal/privacy-statement-20000612">W3C Privacy Policy</a>.</li>
  	<li>The content and style of the Specification <span class="rfc2119">must not</span> cause confusion about its status, in particular with respect to <a href="/TR/">W3C Technical Reports</a>.</li>
@@ -148,7 +148,7 @@ The following rules apply to Final Specifications:
  	<li>when they are published, W3C issues a call for participants to sign the <a href="final">Final Specification Agreement</a>.</li>
  	<li>they <span class="rfc2119">must</span> be available in English.</li>
  	<li>they <span class="rfc2119">must</span> be published on the W3C Web site.</li>
- 	<li> Once a Final Specification has been published at a given URI, the Specification <span class="rfc2119">must not</span> change.</li>
+ 	<li>Once a Final Specification has been published at a given URI, the Specification <span class="rfc2119">must not</span> change.</li>
 </ul>
 Other types of deliverables <span class="rfc2119">must</span> be publicly available and must be archived permanently.
 
@@ -156,7 +156,7 @@ W3C reserves the right to refuse publication of deliverables, for instance if th
 
 </section>
 <section>
-<h3 class="handwriting red" id="community-council">Community Council</h3>
+<h3 id="community-council" class="handwriting red">Community Council</h3>
 The Community Development Lead organizes a Community Council whose mission is:
 <ul>
  	<li>to promote the program and ensure that it functions smoothly, and</li>
@@ -184,7 +184,7 @@ The Council promotes broad inclusion and participation by newcomers in a variety
 </ul>
 </section>
 <section>
-<h3 class="handwriting red" id="transition">Transition to W3C Standards Track</h3>
+<h3 id="transition" class="handwriting red">Transition to W3C Standards Track</h3>
 Some (but not all) Community Group and Business Group Specifications are expected to serve as input to a Working Group. W3C facilitates the transition from Community Group to the W3C Standards Track in a number of ways:
 <ul>
  	<li><strong>Continuity of IPR commitments</strong>. The <a href="final">W3C Community Final Specification Agreement</a> is designed to ensure smooth transition of IPR commitments from Community Groups or Business Groups to Working Groups.</li>
@@ -206,12 +206,12 @@ Business Group policies are the same as Community Groups except where noted belo
 
 </section>
 <section>
-<h3 class="handwriting red" id="bg-creation">Creation of a Business Group</h3>
+<h3 id="bg-creation" class="handwriting red">Creation of a Business Group</h3>
 Business Groups are created in the same manner as Community Groups, except that a proposal is not <a href="#complete-proposal">complete</a> until at least five <em>Organizations</em> support creation of the group. Because goal of Business Groups is to grow the W3C community, we expect Business Groups to have a mix of Member and non-Member Organizations and individuals.
 
 </section>
 <section>
-<h3 class="handwriting red" id="bg-join">Joining a Business Group</h3>
+<h3 id="bg-join" class="handwriting red">Joining a Business Group</h3>
 Joining a Business Group is the same as for a Community Group, except that:
 <ul>
  	<li>there is a participation <a href="/community/about/agreements/fees/">fee</a> (for organizations and individuals), and</li>
@@ -219,17 +219,17 @@ Joining a Business Group is the same as for a Community Group, except that:
 </ul>
 </section>
 <section>
-<h3 class="handwriting red" id="bg-communications">Business Group Communications</h3>
+<h3 id="bg-communications" class="handwriting red">Business Group Communications</h3>
 Each Business Group will have both public and non-public communications mechanisms. The participants decide which channel they use to conduct their work. If the group chooses to conduct its work on non-public channels, the group <span class="rfc2119">must</span> maintain a public home page on the W3C site and <span class="rfc2119">must</span> provide a public communication about their work at least every six months. This may take the form of a publication, a summary of work, or other form most suitable to keep the community informed of its progress.
 
 </section>
 <section>
-<h3 class="handwriting red" id="bg-deliverables">Business Group Deliverables</h3>
+<h3 id="bg-deliverables" class="handwriting red">Business Group Deliverables</h3>
 Deliverables are the same as for Community Groups, except the published documents are called “Business Group Reports”.
 
 </section>
 <section>
-<h3 class="handwriting red" id="bg-staff">Staff Involvement in Business Groups</h3>
+<h3 id="bg-staff" class="handwriting red">Staff Involvement in Business Groups</h3>
 Business Groups do not have staff contacts, but W3C management allocates a small percentage of staff time to consult to Business Groups and help them accomplish their goals.
 
 In addition:
@@ -241,11 +241,11 @@ In addition:
 <div id="policies" class="tab-content">
 <section class="dark-blue">These policies are designed to encourage constructive participation and to balance IPR considerations with ease of participation.
 
-Violations of these policies <span class="rfc2119">should</span> be brought to the attention of the Community Development Lead.  The Community Development Lead is authorized to ban participants for violations of this policy or the signed Agreements, and also to reinstate them. Banned participants may appeal to the Head of W3C Communications.
+Violations of these policies <span class="rfc2119">should</span> be brought to the attention of the Community Development Lead. The Community Development Lead is authorized to ban participants for violations of this policy or the signed Agreements, and also to reinstate them. Banned participants may appeal to the Head of W3C Communications.
 
 </section>
 <section>
-<h3 class="handwriting red" id="ipr">Summary of Copyright and Patent Policies for Community Groups</h3>
+<h3 id="ipr" class="handwriting red">Summary of Copyright and Patent Policies for Community Groups</h3>
 The legal policies designed for Community Groups seek to balance the concerns of both implementers and intellectual property (IPR) holders. This section gives an informative overview of the two license agreements involved:
 <ul>
  	<li><a href="cla">W3C Community Contributor License Agreement (CLA)</a></li>
@@ -263,8 +263,8 @@ A Business Group <span class="rfc2119">may</span> choose to publish its document
 <h4>Patents</h4>
 The patent policy has two steps:
 <ol>
- 	<li><strong>Contributor Agreement</strong>. A participant that makes a contribution to a specification produced by the group agrees to Royalty-Free patent licenses for the contribution. This commitment is governed by the <a href="cla">W3C Community Contributor License Agreement (CLA)</a>. <strong>Note</strong>: The CLA provides patent rights only to individual Contributions.  W3C will provide mechanisms for participants to indicate clearly their Contributions.</li>
- 	<li><strong>Final Specification Agreement</strong>. When the group has completed work on the specification and wishes to promote broader deployment, the  Chair issues a <strong>call for final commitments</strong>. Participants make <em>voluntary</em> Royalty-Free patent license commitments over the <em>entire</em> specification by
+ 	<li><strong>Contributor Agreement</strong>. A participant that makes a contribution to a specification produced by the group agrees to Royalty-Free patent licenses for the contribution. This commitment is governed by the <a href="cla">W3C Community Contributor License Agreement (CLA)</a>. <strong>Note</strong>: The CLA provides patent rights only to individual Contributions. W3C will provide mechanisms for participants to indicate clearly their Contributions.</li>
+ 	<li><strong>Final Specification Agreement</strong>. When the group has completed work on the specification and wishes to promote broader deployment, the Chair issues a <strong>call for final commitments</strong>. Participants make <em>voluntary</em> Royalty-Free patent license commitments over the <em>entire</em> specification by
 executing the <a href="final">W3C Community Final Specification Agreement</a>. In addition, the Community Final Specification Agreement involves a commitment so that material that advances to W3C Recommendation also benefits (automatically) from a Royalty-Free commitment.</li>
 </ol>
 The two-step process is designed to:
@@ -282,7 +282,7 @@ The policies do not define any patent disclosure obligations.
 
 </section>
 <section>
-<h3 class="handwriting red" id="general-policies">General Communications Policies</h3>
+<h3 id="general-policies" class="handwriting red">General Communications Policies</h3>
 All Participants agree to the following general communications policies:
 <ul>
  	<li>Participants <span class="rfc2119">must</span> have an identity within the community.</li>
@@ -295,8 +295,7 @@ All Participants agree to the following general communications policies:
 <section>
 <dl>
  	<dt id="cdl">Community Development Lead</dt>
- 	<dd>
-		          The individual responsible for the Community Group program. The Community Development Lead, appointed by the W3C Management, is responsible for:
+ 	<dd>The individual responsible for the Community Group program. The Community Development Lead, appointed by the W3C Management, is responsible for:
 <ul>
  	<li>Monitoring the W3C Forum</li>
  	<li>Managing escalation of issues</li>
@@ -307,7 +306,7 @@ All Participants agree to the following general communications policies:
  	<dt id="council">Community Council</dt>
  	<dd>This task force assists existing community groups (e.g., in how the standards process works, accessibility input early in the development of the specification) and proactively seeks opportunities to engage with communities outside W3C, to find and communicate opportunities for liaisons.</dd>
  	<dt id="community-submission">Community Submission</dt>
- 	<dd>Community Submissions are proposals made in the W3C  Forum.</dd>
+ 	<dd>Community Submissions are proposals made in the W3C Forum.</dd>
  	<dt id="community-group-report">Community Group or Business Group Report</dt>
  	<dd>A Community or Business Group Report is a document (specification or other type) produced by a Community or Business Group.</dd>
  	<dt id="forum">W3C Forum</dt>
