--- a/policies/process.html
+++ b/policies/process.html
@@ -33,7 +33,7 @@ Individuals who wish to participate in the W3C Forum — enter into discussion o
 
 </section>
 <section>
-<h3 class="handwriting red">Community Submission Publication Policies</h3>
+<h3 id="submission-policies" class="handwriting red">Community Submission Publication Policies</h3>
 Community Submissions must not use a style that will cause them to be confused with <a href="/TR/">W3C Technical Reports</a>. W3C <span class="rfc2119">may</span> publish additional policies to govern publication of Community Submissions.
 
 </section></div>
@@ -42,7 +42,7 @@ Community Submissions must not use a style that will cause them to be confused w
 
 </section>
 <section>
-<h3 class="handwriting red">Creation of a Community Group</h3>
+<h3 id="creation" class="handwriting red">Creation of a Community Group</h3>
 <p id="complete-proposal">Anyone may propose the creation of a Community Group. A proposal is “complete” when:</p>
 
 <ul>
@@ -55,7 +55,7 @@ The Community Development Lead does not formally approve proposals but <span cla
 
 </section>
 <section>
-<h4 class="handwriting red">Community Group Operational Agreements</h4>
+<h4 id="operational-agreements" class="handwriting red">Community Group Operational Agreements</h4>
 A Community Group <span class="rfc2119">may</span> adopt operational agreements (recorded, for example, in the form of a charter) that establish the group's scope of work, decision-making processes, communications preferences, and other operations. For example, the agreement could establish fair and reasonable criteria for accepting contributions in a specification, or set the group's scope of work (e.g., development of educational materials or discussions about future standards work at W3C).
 
 The following rules govern Community Group operational agreements:
@@ -70,22 +70,22 @@ The person who first proposes a group <span class="rfc2119">may</span> establish
 
 </section>
 <section>
-<h3 class="handwriting red">Joining a Community Group</h3>
+<h3 id="joining" class="handwriting red">Joining a Community Group</h3>
 Anyone may join any Community Group. There are no participation fees.
 
 </section>
 <section>
-<h3 class="handwriting red">Resigning from a Community Group</h3>
+<h3 id="resigning" class="handwriting red">Resigning from a Community Group</h3>
 W3C will provide a mechanism for Participants to resign from a Community Group. Participants that resign from a Community Group incur no new or further obligations after the date of resignation and maintain only those obligations already incurred, and that survive resignation from the Community Group, as provided in the <a href="cla">Community Contributor License Agreement (CLA)</a> and, when applicable, the <a href="final">Final Specification Agreement</a>.
 
 </section>
 <section>
-<h3 class="handwriting red">Community Group Chair(s)</h3>
+<h3 id="chairs" class="handwriting red">Community Group Chair(s)</h3>
 Each Community Group <span class="rfc2119">must</span> have at least one Chair who is responsible for ensuring the group fulfills the requirements of this document as well as the group's operational agreements. The participants of the Group choose their Chair(s). The Chair(s) are also the primary contacts for the Community Development Lead.
 
 </section>
 <section>
-<h3 class="handwriting red">Duration and Closure of a Community Group</h3>
+<h3 id="duration" class="handwriting red">Duration and Closure of a Community Group</h3>
 Once a Community Group has been launched, participants may continue to work indefinitely, until the Community Development Lead closes the group; see the <a href="#grounds">grounds for closure</a>.
 
 No less than ten business days before closing a group, the Community Development Lead <span class="rfc2119">must</span> alert the participants. Once closed, no individuals may join, and discussions stop. However, W3C makes available information about closed Community Groups and archives of their communications.
@@ -94,7 +94,7 @@ Closed Community Groups are re-opened following the <a href="#creation">creation
 
 </section>
 <section>
-<h3 class="handwriting red">Grounds for Closure of a Community Group</h3>
+<h3 id="closure" class="handwriting red">Grounds for Closure of a Community Group</h3>
 The Community Development Lead may close a Community Group in any of following circumstances:
 <ul>
  	<li><strong>Chair Request</strong>. The Group Chair requests that the group be closed (e.g., as the result of a group decision, or on a certain date selected in advance by the group).</li>
@@ -105,7 +105,7 @@ The Community Development Lead and Chair <span class="rfc2119">should</span> dis
 
 </section>
 <section>
-<h3 class="handwriting red">Community Group Communications</h3>
+<h3 id="comms" class="handwriting red">Community Group Communications</h3>
 Each Community Group will have both public and non-public communications mechanisms. The former are for work, the latter for administrative matters (e.g., personal information used in meeting planning).
 
 To help Community Group participants adhere to the <a href="#general-policies">general communications policies</a>, all participants (including the Chair) <span class="rfc2119">should</span> help moderate discussion (for instance, to keep the group focused on relevant topics).
@@ -116,12 +116,12 @@ All communications <span class="rfc2119">must</span> be archived.
 
 </section>
 <section>
-<h4 class="handwriting red">Community Group Branding</h4>
+<h4 id="branding" class="handwriting red">Community Group Branding</h4>
 Any Community Group branding (e.g., use of W3C name or logo in ways that may confuse the state of standardization, or technology-specific logo development) is subject to review and approval by the Head of W3C Marketing and Communications.
 
 </section>
 <section>
-<h3 class="handwriting red">Community Group Meeting Policies</h3>
+<h3 id="meeting" class="handwriting red">Community Group Meeting Policies</h3>
 A Community Group is not required to hold meetings. However, if it does, then the Chair <span class="rfc2119">must</span> ensure that the following happens:
 <ul>
  	<li>the meeting is announced to the group in a timely fashion so that people can schedule attendance;</li>
@@ -130,7 +130,7 @@ A Community Group is not required to hold meetings. However, if it does, then th
 </ul>
 </section>
 <section>
-<h3 class="handwriting red">Community Group Deliverables</h3>
+<h3 id="deliverables" class="handwriting red">Community Group Deliverables</h3>
 Community Group deliverables may be anything, including documents, test suites, tutorials, demos, code, discussion, etc. W3C will provide infrastructure to host discussions, code, specifications, test suites, and so on.
 
 The label "Community Group Report" refers to any document produced by a Group. Some Community Group Reports are Specifications. The following rules apply to Specifications:
@@ -193,7 +193,7 @@ Some (but not all) Community Group and Business Group Specifications are expecte
 </ul>
 </section>
 <section>
-<h4>Parallel Activities between a Community Group and a Working Group</h4>
+<h4 id="parallel">Parallel Activities between a Community Group and a Working Group</h4>
 A Community Group may continue to exist after a Working Group has been chartered. The Community Group may wish to start experimenting with new ideas for a technology while the Working Group builds consensus and focuses on implementation of a stable set of agreed upon features.
 
 W3C recommends that once a Working Group has taken up a Community Group or Business Group Specification, the Community or Business Group should no longer develop the same material in parallel. Working Group licensing commitments are limited to the deliverables of the Working Group, so commitments do not follow text that is taken up by other groups (Community Groups or Working Groups).
@@ -253,14 +253,14 @@ The legal policies designed for Community Groups seek to balance the concerns of
 </ul>
 </section>
 <section>
-<h4>Copyright</h4>
+<h4 id="copyright">Copyright</h4>
 All participant contributions to a Specification produced by the group are made available under a permissive copyright license that allows the creation of derivative works subject to attribution requirements.
 
 A Business Group <span class="rfc2119">may</span> choose to publish its document under the <a href="http://www.w3.org/Consortium/Legal/2002/copyright-documents-20021231">W3C Document Licence</a>.
 
 </section>
 <section>
-<h4>Patents</h4>
+<h4 id="patents">Patents</h4>
 The patent policy has two steps:
 <ol>
  	<li><strong>Contributor Agreement</strong>. A participant that makes a contribution to a specification produced by the group agrees to Royalty-Free patent licenses for the contribution. This commitment is governed by the <a href="cla">W3C Community Contributor License Agreement (CLA)</a>. <strong>Note</strong>: The CLA provides patent rights only to individual Contributions. W3C will provide mechanisms for participants to indicate clearly their Contributions.</li>
@@ -277,7 +277,7 @@ W3C has a preference for organizational, rather than individual commitments. Req
 
 </section>
 <section>
-<h4>Disclosure</h4>
+<h4 id="disclosure">Disclosure</h4>
 The policies do not define any patent disclosure obligations.
 
 </section>
