Import revision of summary.html from Wordpress revision

--- a/policies/summary.html
+++ b/policies/summary.html
@@ -1,5 +1,5 @@
 <!doctype html><html lang=en><title>Patent and Copyright Policy Summary</title><body>This is a summary of the <a href="/community/about/agreements/cla/">W3C Community Contributor License Agreement (CLA)</a> and <a href="/community/about/agreements/final/">W3C Community Final Specification Agreement</a>. The sole purpose of this document is to provide a helpful summary of the policies. It has no legal standing. For authoritative information, please refer to the policies themselves.
-<h2>Goals of the Policies</h2>
+<h2 id="goals">Goals of the Policies</h2>
 <a href="/community/">W3C Community and Business Groups</a> provide people with a place to do pre-standards work at W3C. When people collaborate on a Specification, they contribute intellectual property (IP). It is a high-level goal of these policies to ensure that Specifications produced under these policies can be implemented on a Royalty-Free (RF) basis. These policies also seek to facilitate participation by those organizations or people who have IP. Thus, considerations include:
 <ul>
  	<li> <b>Rapid startup for group initiators</b>. The policies have been designed so that people can launch a group rapidly and begin to participate without up-front patent licensing commitments.</li>
@@ -9,7 +9,7 @@
  	<li> <b>Transparency for participants</b>. Because information about commitments is publicly available, participants can proceed based on the extent of available commitments.</li>
  	<li> <b>Smooth transition to standards track</b>. The policies are designed for smooth transition from Community or Business Group to the W3C standards track, when the community chooses that path.</li>
 </ul>
-<h2>General Overview</h2>
+<h2 id="overview">General Overview</h2>
 The two agreements include provisions for both copyright and patent rights; see below for details. The agreements are <b>from</b> participants and <b>to</b> implementers (or other licensees). W3C does not own any patents or copyrights as a result of these agreements.
 
 Together, the agreements form a two-step policy so that people make lightweight commitments when work starts and more comprehensive commitments once work is mature.
@@ -20,12 +20,12 @@ Together, the agreements form a two-step policy so that people make lightweight 
 Please note that signing the CLA is a requirement for joining a group, but signing the FSA is voluntary.
 
 The two-step policy is thus designed to make it easier for organizations to start work quickly, to limit their licensing obligations during development, and to voluntarily make a more complete commitment to the community at a later time. This gives implementers some "patent protection" during the draft phase, and the possibility of greater protection once the specification is stable.
-<h2>Copyright Summary</h2>
+<h2 id="copyright-summary">Copyright Summary</h2>
 <ul>
  	<li> <b>Permissive</b>. Those who sign the agreements grant a permissive copyright license (which allows, for example, the creation of derivative works).</li>
  	<li> <b>Attribution</b>. Attribution is required to the Specification to which the material was contributed. Note this difference from a Creative Commons license that requires attribution to the licensor.</li>
 </ul>
-<h2>Patent Licensing Summary</h2>
+<h2 id="patent-summary">Patent Licensing Summary</h2>
 Those who sign the agreements make <b>Royalty-Free licensing commitments</b> to implementers of the specification to which the material was contributed. The policies are <b>not actual patent licenses</b> but instead (like the <a href="http://www.w3.org/Consortium/Patent-Policy-20040205/">W3C Patent Policy</a>) define requirements of any license granted under the policy.
 
 To give IPR holders confidence that their licensing obligations extend only to material that they intend to commit, the policy includes several provisions to scope the commitment. The primary scoping provisions of the CLA are:
@@ -44,13 +44,13 @@ To give IPR holders confidence that their licensing obligations extend only to m
 The FSA is structured similarly, but because it refers to a specific, unchanging document, it does not include provisions related to opt-out, modifications, and so on.
 
 Note that there are <b>no new patent disclosure obligations</b> under the CLA or FSA.
-<h3>Transition to W3C Standards Track</h3>
+<h3 id="transition">Transition to W3C Standards Track</h3>
 The CLA and FSA were designed in several ways to make it easy for work to transition to the W3C standards track.
 <ul>
  	<li> <b>Commitment Extends to Standards Track.</b> To ensure licensing continuity as a work progresses from a Community or Business Group to the W3C standards track, participant commitments carry over when a Specification is moved to the W3C Recommendation Track. However, licensors may <b>exclude</b> their patent claims from the Royalty-Free commitment as part of the usual W3C Patent Policy (and without having to join a Working Group to do so). This means that commitments continue through the standards process by default, but that license holders have the right to alter their commitments through a well-defined process.</li>
  	<li> <b>Shared Definition of Essential Claims.</b> The CLA, FSA, and the <a href="http://www.w3.org/Consortium/Patent-Policy-20040205/">W3C Patent Policy</a> share the definition of Essential Claims, simplifying the relationship between the policies. One implication is that when a Specification moves to the Recommendation Track, licensing commitments do not grow beyond what they were for the original Community/Business Group Specification.</li>
 </ul>
-<h2>Additional Resources</h2>
+<h2 id="seealso">Additional Resources</h2>
 <ul>
  	<li> <a href="/community/about/faq/">Community and Business Group FAQ</a> which includes some patent policy questions and answers.</li>
  	<li> <a href="http://www.w3.org/2011/Talks/community-201109/">CG/BG slide set</a>, which includes an even shorter summary.</li>
