Import revision of cla-deed.html from Wordpress revision

--- a/policies/cla-deed.html
+++ b/policies/cla-deed.html
@@ -3,23 +3,23 @@
 <strong>
 Copyright © [Date] the Contributors to the [Name/Version Information] Specification, published by the W3C [Name of Community/Business Group] under the <a href="https://www.w3.org/community/about/agreements/cla/">W3C Community Contributor License Agreement (CLA)</a>. A human-readable <a href="http://www.w3.org/community/about/agreements/cla-deed/">summary</a> is available.</strong></blockquote>
 <strong>Note for Editors</strong>: For markup boilerplate, please see the <a href="/community/reports/reqs/">Report Requirements</a>.
-<h2>Summary of Key License Terms</h2>
+<h2 id="keylicenseterms">Summary of Key License Terms</h2>
 The <a href="/community/about/agreements/cla/">W3C Community Contributor License Agreement (CLA)</a> expresses the full agreement between the contributors ("I" in the license agreement) and you ("you" in the license agreement). The following is a handy, human-readable expression of key terms of the CLA. This summary is <strong>not</strong> the actual agreement. This summary has no legal value or effect and its contents do not appear in the actual agreement.
-<h3>What Contributors Give under the CLA</h3>
+<h3 id="contributorsgive">What Contributors Give under the CLA</h3>
 Under the CLA, each contributor gives everyone:
 <ul>
  	<li><b>Copyright</b> - a royalty-free license to use the copyrights for their Contributions; see section 2 of the agreement.</li>
  	<li><b>Patent</b> - a commitment to license on a royalty-free basis their essential patent claims reading on their Contributions; see sections 3 and 12 of the agreement as well as section 9 regarding transition to the W3C Recomendation Track.</li>
 </ul>
 <strong>Note:</strong> Contributors have a 45-day opt-out from the date they contribute material; see section 5 of the agreement.
-<h3>What the Community Gets</h3>
+<h3 id="communitygets">What the Community Gets</h3>
 The community is free to:
 <ul>
  	<li><b>Share</b> - copy and distribute the Specification.</li>
  	<li><b>Modify the Specification</b> - make new versions of the Specification. If you make new versions of the Specification you must include <b>attribution</b> to the original Specification (but not in any way that suggests that they endorse you or your use of the work).</li>
  	<li><b>Implement the Specification</b> - secure the royalty-free rights from contributors necessary to implement the specification.</li>
 </ul>
-<h3>Use of Trademark</h3>
+<h3 id="trademark">Use of Trademark</h3>
 See section 4 of the agreement.
-<h3>Representations, Warranties and Disclaimers</h3>
+<h3 id="disclaimers">Representations, Warranties and Disclaimers</h3>
 See section 11 of the agreement.</body>
