--- a/policies/fsa-deed.html
+++ b/policies/fsa-deed.html
@@ -3,22 +3,22 @@
 <strong>
 Copyright © [YEAR(S)] the Contributors to the [Name/Version Information] Specification, published by the W3C [Name of Community/Business Group] under the <a href="http://www.w3.org/community/about/agreements/final/">W3C Community Final Specification Agreement (FSA)</a>. A human-readable <a href="http://www.w3.org/community/about/agreements/fsa-deed/">summary</a> is available.</strong></blockquote>
 <strong>Note for Editors</strong>: For markup boilerplate, please see the <a href="/community/reports/reqs/">Report Requirements</a>.
-<h2>Summary of Key License Terms</h2>
+<h2 id="fsa-keyterms">Summary of Key License Terms</h2>
 The <a href="/community/about/agreements/final/">W3C Community Final Specification Agreement (FSA)</a> expresses the full agreement between the parties that signed the agreement ("I" in the license agreement) and you ("you" in the license agreement). The following is a handy, human-readable expression of key terms of the FSA. This summary is <strong>not</strong> the actual agreement. This summary has no legal value or effect and its contents do not appear in the actual agreement.
-<h3>What Signers Give under the Final Specification Agreement (FSA)</h3>
+<h3 id="signersgive">What Signers Give under the Final Specification Agreement (FSA)</h3>
 Under the FSA, signers give everyone:
 <ul>
  	<li><b>Copyright</b> - a royalty-free license to use the copyrights for the entire Specification; see section 2 of the agreement.</li>
  	<li><b>Patent</b> - a commitment to license on a royalty-free basis their essential patent claims reading on the entire Specification; see section 3 and 10 of the agreement as well as section 7 regarding transition to the W3C Recomendation Track.</li>
 </ul>
-<h3>What the Community Gets</h3>
+<h3 id="fsa-communitygets">What the Community Gets</h3>
 The community is free to:
 <ul>
  	<li><b>Share</b> - copy and distribute the Specification.</li>
  	<li><b>Modify the Specification</b> - make new versions of the Specification. If you make new versions of the Specification you must include <b>attribution</b> to the original Specification (but not in any way that suggests that they endorse you or your use of the work).</li>
  	<li><b>Implement the Specification</b> - secure the royalty-free rights from signers necessary to implement the specification.</li>
 </ul>
-<h3>Use of Trademark</h3>
+<h3 id="fsa-tm">Use of Trademark</h3>
 See section 4 of the agreement.
-<h3>Representations, Warranties and Disclaimers</h3>
+<h3 id="fsa-disclaimers">Representations, Warranties and Disclaimers</h3>
 See section 9 of the agreement.</body>
