--- a/policies/fees.html
+++ b/policies/fees.html
@@ -14,21 +14,21 @@
 <tr>
 <td>Large non-Member Organization</td>
 <td>10,000</td>
-<td>775,000</td>
-<td>7500</td>
-<td>62,500</td>
+<td>1,100,000</td>
+<td>8900</td>
+<td>68,000</td>
 </tr>
 <tr>
 <td>Small non-Member Organization</td>
 <td>2000</td>
-<td>155,000</td>
+<td>220,000</td>
 <td>1500</td>
-<td>12,500</td>
+<td>13,500</td>
 </tr>
 <tr>
 <td>Unaffiliated individual</td>
 <td>300</td>
-<td>23,000</td>
+<td>32,000</td>
 <td>225</td>
 <td>2000</td>
 </tr>
@@ -42,6 +42,8 @@
 </tbody>
 </table>
 </div>
+<strong><em>Note: These rates are effective 01 Oct 2020 for any new Members or renewals after that date.</em></strong>
+
 A "Large" organization is one whose annual gross revenue, as measured by the most recent audited statement, is greater than or equal to 50M USD. A "Small" organization is one with revenues less than that threshold, with more than one employee.
 
 For non-Member Organizations that join a Business Group, any number of their employees may participate in that group.
